# lobstrio-cli

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  plan.md  pyproject.toml
.github/workflows/: test.yml
docs/plans/: 2026-03-04-lobstr-cli-design.md  2026-03-04-lobstr-cli-implementation.md
src/lobstr_cli/: __init__.py  __main__.py  cli.py  client.py  config.py  display.py  resolve.py
src/lobstr_cli/commands/: accounts.py  auth.py  crawlers.py  delivery.py  go.py  results.py  run.py  squid.py  task.py
tests/: test_cli.py  test_client.py  test_commands_accounts.py  test_commands_auth.py  test_commands_crawlers.py  test_commands_delivery.py  test_commands_go.py  test_commands_results.py  test_commands_run.py  test_commands_squid.py  test_commands_task.py  test_config.py  test_display.py  test_resolve.py
