[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lobstr-cli"
version = "0.1.0"
description = "CLI for the Lobstr.io scraping API"
requires-python = ">=3.10"
dependencies = [
    "typer[all]>=0.9.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
    "tomli>=2.0.0;python_version<'3.11'",
    "tomli-w>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.30.0",
    "ruff>=0.4.0",
]

[project.scripts]
lobstr = "lobstr_cli.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/lobstr_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
