[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lobstrio-cli"
version = "0.3.0"
description = "CLI for the Lobstr.io scraping API"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "lobstrio" },
]
keywords = ["lobstr", "scraping", "cli", "web-scraping", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = [
    "typer[all]>=0.9.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
    "tomli>=2.0.0;python_version<'3.11'",
    "tomli-w>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.30.0",
    "ruff>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/lobstrio/lobstrio-cli"
Documentation = "https://github.com/lobstrio/lobstrio-cli#readme"
Repository = "https://github.com/lobstrio/lobstrio-cli"
Issues = "https://github.com/lobstrio/lobstrio-cli/issues"
Changelog = "https://github.com/lobstrio/lobstrio-cli/blob/main/CHANGELOG.md"

[project.scripts]
lobstr = "lobstr_cli.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/lobstr_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 120
